# armarx-tutorials

./: README.md  TODO
ComponentsExample/: CMakeLists.txt
ComponentsExample/data/ComponentsExample/: VariantInfo-ComponentsExample.xml
ComponentsExample/etc/cmake/: UseComponentsExample.cmake
ComponentsExample/etc/doxygen/: mainpage.dox
ComponentsExample/etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
ComponentsExample/source/: CMakeLists.txt
ComponentsExample/source/ComponentsExample/: CMakeLists.txt
ComponentsExample/source/ComponentsExample/applications/: CMakeLists.txt
ComponentsExample/source/ComponentsExample/applications/RNG/: CMakeLists.txt  RNGApp.h  main.cpp
ComponentsExample/source/ComponentsExample/components/: CMakeLists.txt
ComponentsExample/source/ComponentsExample/components/RNGCallerComponent/: CMakeLists.txt  RNGCallerComponent.cpp  RNGCallerComponent.h
ComponentsExample/source/ComponentsExample/components/RNGCallerComponent/test/: CMakeLists.txt  RNGCallerComponentTest.cpp
ComponentsExample/source/ComponentsExample/components/RNGProviderComponent/: CMakeLists.txt  RNGProviderComponent.cpp  RNGProviderComponent.h
ComponentsExample/source/ComponentsExample/components/RNGProviderComponent/test/: CMakeLists.txt  RNGProviderComponentTest.cpp
ComponentsExample/source/ComponentsExample/interface/: CMakeLists.txt  RNGComponentProviderInterface.ice
PickAndPlaceTutorial/: CMakeLists.txt
PickAndPlaceTutorial/data/PickAndPlaceTutorial/: VariantInfo-PickAndPlaceTutorial.xml
PickAndPlaceTutorial/etc/cmake/: UsePickAndPlaceTutorial.cmake
PickAndPlaceTutorial/etc/doxygen/pages/: FAQ.dox
PickAndPlaceTutorial/scenarios/: CMakeLists.txt
PickAndPlaceTutorial/scenarios/PickAndPlaceScenario/: CMakeLists.txt  global.cfg
PickAndPlaceTutorial/scenarios/PickAndPlaceScenario/config/: RobotControl.cfg  XMLRemoteStateOfferer.PickAndPlace.cfg  XMLRemoteStateOfferer.VisualServo.cfg
PickAndPlaceTutorial/source/: CMakeLists.txt
PickAndPlaceTutorial/source/PickAndPlaceTutorial/statecharts/PickAndPlaceGroup/: CMakeLists.txt  PickAndPlace.cpp  PickAndPlace.h  PickAndPlace.xml  PickAndPlaceGroup.scgxml  PickAndPlaceGroupRemoteStateOfferer.cpp  PickAndPlaceGroupRemoteStateOfferer.h
SecondHandsPickAndPlace/: .gitignore  CMakeLists.txt
SecondHandsPickAndPlace/data/SecondHandsPickAndPlace/: VariantInfo-SecondHandsPickAndPlace.xml
SecondHandsPickAndPlace/data/SecondHandsPickAndPlace/dbexport_with_grasps/: exp-SecondHandsDB-collPrior_OcadoEnvironment.json  exp-SecondHandsDB-collSnapshot_OcadoEnvironmentFelix_agentInstances.json  exp-SecondHandsDB-collSnapshot_OcadoEnvironmentFelix_objectInstances.json  exp-SecondHandsDB-collSnapshot_OcadoEnvironment_agentInstances.json  exp-SecondHandsDB-collSnapshot_OcadoEnvironment_objectInstances.json  exp-SecondHandsDB-collfs.chunks.json  exp-SecondHandsDB-collfs.files.json  exp-SecondHandsDB-collsnapshots.json  exp-SecondHandsDB-collsystem.indexes.json
SecondHandsPickAndPlace/etc/cmake/: UseSecondHandsPickAndPlace.cmake
SecondHandsPickAndPlace/etc/doxygen/: mainpage.dox
SecondHandsPickAndPlace/etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
SecondHandsPickAndPlace/scenarios/: CMakeLists.txt
SecondHandsPickAndPlace/scenarios/PickAndPlaceScenario/: CMakeLists.txt
SecondHandsPickAndPlace/scenarios/PickAndPlaceScenario/config/: RobotControl.cfg  XMLRemoteStateOfferer.GraspObject.cfg  XMLRemoteStateOfferer.Hand.cfg  XMLRemoteStateOfferer.MotionControl.cfg  XMLRemoteStateOfferer.PickAndPlace.cfg  XMLRemoteStateOfferer.PlaceObject.cfg  XMLRemoteStateOfferer.PlatformGroup.cfg  XMLRemoteStateOfferer.SecondHandsPickAndPlace.cfg
SecondHandsPickAndPlace/source/: CMakeLists.txt
SecondHandsPickAndPlace/source/SecondHandsPickAndPlace/: CMakeLists.txt
SecondHandsPickAndPlace/source/SecondHandsPickAndPlace/interface/: CMakeLists.txt
SecondHandsPickAndPlace/source/SecondHandsPickAndPlace/statecharts/: CMakeLists.txt
SecondHandsPickAndPlace/source/SecondHandsPickAndPlace/statecharts/SecondHandsPickAndPlaceGroup/: CMakeLists.txt  SecondHandsPickAndPlace.cpp  SecondHandsPickAndPlace.h  SecondHandsPickAndPlace.xml  SecondHandsPickAndPlaceGroup.scgxml  SecondHandsPickAndPlaceGroupRemoteStateOfferer.cpp  SecondHandsPickAndPlaceGroupRemoteStateOfferer.h
SecondHandsY1PickAndPlace/: CMakeLists.txt  README.txt
SecondHandsY1PickAndPlace/data/SecondHandsY1PickAndPlace/: VariantInfo-SecondHandsY1PickAndPlace.xml
SecondHandsY1PickAndPlace/etc/doxygen/: mainpage.dox
SecondHandsY1PickAndPlace/scenarios/: CMakeLists.txt
SecondHandsY1PickAndPlace/scenarios/PickAndPlaceScenario/: CMakeLists.txt  PickAndPlaceScenario.icegrid.xml  PickAndPlaceScenario.remote.icegrid.xml  SceneEditor.ini  startScenario.sh  stopScenario.sh
SecondHandsY1PickAndPlace/scenarios/Y1MultiplePickAndPlaceScenario/: CMakeLists.txt  Y1MultiplePickAndPlaceScenario.icegrid.xml  Y1MultiplePickAndPlaceScenario.remote.icegrid.xml  startScenario.sh  stopScenario.sh
SecondHandsY1PickAndPlace/source/: CMakeLists.txt
StateChartTutorial/: .gitignore  CMakeLists.txt
StateChartTutorial/data/StateChartTutorial/: VariantInfo-StateChartTutorial.xml
StateChartTutorial/etc/cmake/: UseStateChartTutorial.cmake
StateChartTutorial/etc/doxygen/: mainpage.dox
StateChartTutorial/scenarios/: CMakeLists.txt
StateChartTutorial/scenarios/StartStateChart/: CMakeLists.txt
StateChartTutorial/source/: CMakeLists.txt
StateChartTutorial/source/StateChartTutorial/statecharts/StateChartTutorialGroup/: CMakeLists.txt  CounterState.cpp  CounterState.generated.h  CounterState.h  CounterState.xml  MainState.cpp  MainState.generated.h  MainState.h  MainState.xml  MoveRobotJoints.cpp  MoveRobotJoints.h  MoveRobotJoints.xml  SetRobotJoints.cpp  SetRobotJoints.h  SetRobotJoints.xml  StateChartTutorialGroup.scgxml  StateChartTutorialGroupRemoteStateOfferer.cpp  StateChartTutorialGroupRemoteStateOfferer.h  StateChartTutorialGroupStatechartContext.generated.h
(+52 files in other folders)
